feat: finalizada documentação e corrigido teste
